Dashboard cliente listo

--- a/client/cliente/html/dashboard_user.html
+++ b/client/cliente/html/dashboard_user.html
@@ -1,23 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="../vendor/simple-line-icons/css/simple-line-icons.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Dasboard</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3b6cff; " id="nav">    
-      </nav>
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: #3b6cff;"
+      id="nav"
+    ></nav>
     <div class="container">
-        <hr>
-        <h1 class="x">Hola mister tal!</h1>
+      <br />
+      <hr />
+      <div class="row">
+        <div class="col-sm-6">
+          <center>
+            <h1 class="x">
+              ¿Qué es Portillo`s CRM?
+            </h1>
+          </center>
+          <hr />
+          <br /><br />
+        </div>
+        <div class="col-sm-6">
+          <center>
+            <h1 class="x">
+              Beneficios
+            </h1>
+          </center>
+          <hr />
+          <br /><br />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6" id="texto">
+          <h4>
+            Es una aplicación que te permite administrar los clientes, tener una
+            relación más personal con tus clientes. Administrar tus clientes,
+            tus contactos, crear reuniones con cualquiera de tus clientes y
+            crear reportes de cualquiera de tus reuniones.
+          </h4>
+          <hr />
+        </div>
+        <div class="col-sm-2">
+          <center>
+            <i class="fa fa-check-square fa-5x" aria-hidden="true"></i>
+            <h5>Velocidad</h5>
+            <hr />
+          </center>
+        </div>
+        <div class="col-sm-2">
+          <center>
+            <i class="fa fa-calendar fa-5x" aria-hidden="true"></i>
+            <h5>Organizaciòn</h5>
+            <hr />
+          </center>
+        </div>
+        <div class="col-sm-2">
+          <center>
+            <i class="fa fa-users fa-5x" aria-hidden="true"></i>
+            <h5>Reuniones</h5>
+            <hr />
+          </center>
+        </div>
+        <hr />
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <h2 class="x">Portillo`s CRM <i class="fa fa-diamond fa-3x" aria-hidden="true"></i></h2>
+        </div>
+        <div class="col-sm-2">
+          <center>
+            <i class="fa fa-bar-chart fa-5x" aria-hidden="true"></i>
+            <h5>Reportes</h5>
+            <hr>
+          </center>
+        </div>
+        <div class="col-sm-2">
+          <center>
+            <i class="fa fa-user-o fa-5x" aria-hidden="true"> </i>
+            <h5>Contactos</h5>
+            <hr>
+          </center>
+        </div>
+        <div class="col-sm-2">
+          <center>
+            <i class="fa fa-building fa-5x" aria-hidden="true"></i>
+            <h5>Clientes</h5>
+            <hr>
+          </center>
+        </div>
+      </div>
     </div>
-    
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
     <script src="../Js/nav.js"></script>
-</body>
+  </body>
 </html>
