Autenticacion lista, falta el token

--- a/client/cliente/html/dashboard_user.html
+++ b/client/cliente/html/dashboard_user.html
@@ -13,11 +13,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link
-      href="../vendor/simple-line-icons/css/simple-line-icons.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="../vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../css/style.css" />
     <title>Dasboard</title>
   </head>
