Desarrollando la autenticacion, solo falta comprobar que el token sea correcto y valido

--- a/client/cliente/index.html
+++ b/client/cliente/index.html
@@ -127,7 +127,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Portillo`s CR</a>
+        <a class="navbar-brand" href="#">Portillo`s CRM</a>
         <a type="button" class="btn btn-primary " data-toggle="modal" data-target="#exampleModalCenter" href="#">Entrar</a>
       </div>
     </nav>
