--- a/client/cliente/html/dashboard_user.html
+++ b/client/cliente/html/dashboard_user.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
     />
+    
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+      rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="../vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../css/style.css" />
     <title>Dasboard</title>
@@ -106,21 +104,28 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <script src="../Js/nav.js"></script>
+    <script type="text/javascript" src="../Js/compartidos/nav.js"></script>
+    <script>
+      function cerrar_session() {
+  const completed = (e) => {
+    var persona = JSON.parse(e.target.responseText);
+    if (persona.borrado) {
+      localStorage.removeItem("usuarios");
+      window.open("../index.html", "_self");
+    } 
+  };
+  const error = () => console.log(this.responseText);
+  let persona = JSON.parse(localStorage.getItem("usuarios"));
+  const ajaxRequest = new XMLHttpRequest();
+  ajaxRequest.addEventListener("load", completed);
+  ajaxRequest.addEventListener("error", error);
+  ajaxRequest.open("DELETE","http://localhost:3000/CRM/logout");
+  ajaxRequest.setRequestHeader("authorization",persona[0].usuario_token)
+  ajaxRequest.send();
+}
+    </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   </body>
 </html>
