--- a/client/cliente/html/clientes.html
+++ b/client/cliente/html/clientes.html
@@ -185,5 +185,15 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="../Js/controller.js"></script>
+    <script>
+      function validar() {
+            var respuesta = confirm("¿Seguro quiere eliminar el cliente?");
+            if (respuesta) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
   </body>
 </html>
