CRUD reuniones listo

--- a/client/cliente/html/contactos.html
+++ b/client/cliente/html/contactos.html
@@ -43,7 +43,6 @@
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Cliente</label>
                     <select class="form-control" id="cliente">
-                      <option>Ninguno</option>
                     </select>
                   </div>
                 <div class="form-row">
@@ -93,7 +92,7 @@
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Cliente</label>
                     <select class="form-control" id="clienteE">
-                      <option>Ninguno</option>
+                      
                     </select>
                   </div>
                 <div class="form-row">
@@ -150,7 +149,7 @@
                 <th scope="col">Correo</th>
                 <th scope="col">Teléfono</th>
                 <th scope="col">Puesto</th>
-                <th scope="col"><a  href="./dashboard_user.html" class="btn btn-success" data-toggle="modal" data-target="#modal_registro">A</a></th>
+                <th scope="col"><a  href="./dashboard_user.html" id="agregar" class="btn btn-success" data-toggle="modal" data-target="#modal_registro">A</a></th>
               </tr>
             </thead>
             <tbody>
