--- a/client/cliente/index.html
+++ b/client/cliente/index.html
@@ -60,7 +60,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" onclick="autenticar()">Entrar</button>
+                <button type="button" class="btn btn-primary" onclick="autenticar()">Registrar</button>
               </div>
             </form>
           </div>
@@ -98,7 +98,8 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" onclick="registrar_usuario()">Entrar</button>
+                <!-- <button type="button" class="btn btn-primary" onclick="registrar_usuario()">Entrar</button> -->
+                <a href="#" type="button" class="btn btn-primary" onclick="registrar_usuario()">Entrar</a>
               </div>
             </form>
           </div>
