--- a/client/cliente/html/reuniones.html
+++ b/client/cliente/html/reuniones.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <title>Reuniones</title>
   </head>
-  <body onload="cargar_clientes(); cargar_reuniones(); cargar_usuarios();">
+  <body onload="cargar_reuniones(); cargar_usuarios();cargar_clientes();">
      <!-- Mensaje -->
      <div class="modal" tabindex="-1" role="dialog" id="sms">
       <div class="modal-dialog" role="document">
