--- a/client/cliente/index.html
+++ b/client/cliente/index.html
@@ -60,7 +60,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" onclick="autenticar()">Registrar</button>
+                <button type="button" class="btn btn-primary" onclick="autenticar()">Entrar</button>
               </div>
             </form>
           </div>
@@ -99,7 +99,7 @@
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                 <!-- <button type="button" class="btn btn-primary" onclick="registrar_usuario()">Entrar</button> -->
-                <a href="#" type="button" class="btn btn-primary" onclick="registrar_usuario()">Entrar</a>
+                <a href="#" type="button" class="btn btn-primary" onclick="registrar_usuario()">Registrarme</a>
               </div>
             </form>
           </div>
